Continue GUI implementation (PlayerArea, hoover effect, select effect, and others)